MFB: Fixed bug #48465 (sys_get_temp_dir() possibly inconsistent when using TMPDIR).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@282720 c90b9560-bf6c-de11-be94-00142212c4b1